--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -4,7 +4,7 @@
   <title>Omniflow - Process Automation Group</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/bootstrap.min.css">
+    <link rel="stylesheet" href="/themes/bootstrap.min.superhero.css">
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
     <script src='compatibility.js'></script>
