--- a/Web/src/index.html
+++ b/Web/src/index.html
@@ -4,7 +4,8 @@
   <title>PJB Guitars</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/themes/bootstrap.min.superhero.css">
+    <link rel="stylesheet" href="/themes/bootstrap.min.css">
+    <link rel="stylesheet" href="/themes/philipjbuttrose.css">
     <script src='compatibility.js'></script>
 </head>
 <body>
